--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "bootstrap-icons": "^1.11.3",
     "flowbite-react": "^0.9.0",
     "gsap": "^3.12.5",
     "next": "14.2.4",
